[gd_scene load_steps=14 format=3 uid="uid://c8fb7rgbb8ya3"]

[ext_resource type="Texture2D" uid="uid://qaol4eixm4ac" path="res://assets/desktop/desktop.png" id="1_n4ug4"]
[ext_resource type="Script" uid="uid://djrc44rsffea2" path="res://scripts/desktop.gd" id="2_hcw2o"]
[ext_resource type="ButtonGroup" uid="uid://bn5loh716mh40" path="res://assets/publishers-news.tres" id="2_nrcet"]
[ext_resource type="Texture2D" uid="uid://d381n4dn4rvvn" path="res://assets/desktop/publishers-unclicked.png" id="2_s8ndo"]
[ext_resource type="Texture2D" uid="uid://chhhfieeu03u3" path="res://assets/desktop/publishers-clicked.png" id="3_nrcet"]
[ext_resource type="Texture2D" uid="uid://4snvctsmlgtj" path="res://assets/desktop/news-unclicked-updated.png" id="4_s8ndo"]
[ext_resource type="Texture2D" uid="uid://dj17kxhrauq5b" path="res://assets/desktop/news-clicked-upadated.png" id="5_s8ndo"]
[ext_resource type="Texture2D" uid="uid://bx1skw2tj7u40" path="res://assets/desktop/news-cover2.png" id="8_c6q1a"]
[ext_resource type="Texture2D" uid="uid://cvm2dcudf4h0m" path="res://assets/desktop/news-cover1.png" id="9_kufai"]
[ext_resource type="Texture2D" uid="uid://bps66c50njl1r" path="res://assets/desktop/news-cover3.png" id="10_2bcn7"]
[ext_resource type="Texture2D" uid="uid://c2axt3tnw41xh" path="res://assets/desktop/publisher-card1.png" id="11_2bcn7"]
[ext_resource type="Texture2D" uid="uid://cde4eyvixpuke" path="res://assets/desktop/publisher-card2.png" id="12_eu5o3"]
[ext_resource type="Texture2D" uid="uid://bsmn505bdr1fb" path="res://assets/desktop/publisher-card3.png" id="13_eej11"]

[node name="Desktop" type="TextureRect"]
offset_left = 1.0
offset_top = -13.0
offset_right = 392.0
offset_bottom = 400.0
texture = ExtResource("1_n4ug4")
script = ExtResource("2_hcw2o")

[node name="PublishersButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 91.0
offset_top = 65.0
offset_right = 191.0
offset_bottom = 165.0
toggle_mode = true
button_group = ExtResource("2_nrcet")
texture_normal = ExtResource("2_s8ndo")
texture_pressed = ExtResource("3_nrcet")

[node name="NewsButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 21.0
offset_top = 62.0
offset_right = 121.0
offset_bottom = 162.0
toggle_mode = true
button_group = ExtResource("2_nrcet")
texture_normal = ExtResource("4_s8ndo")
texture_pressed = ExtResource("5_s8ndo")

[node name="NewsContent" type="Control" parent="."]
anchors_preset = 0
offset_left = 29.0
offset_top = -98.0
offset_right = 397.0
offset_bottom = -65.0
scale = Vector2(2, 2)

[node name="TextureRect2" type="TextureRect" parent="NewsContent"]
layout_mode = 2
offset_left = 23.0
offset_top = 219.5
offset_right = 123.0
offset_bottom = 319.5
size_flags_stretch_ratio = 0.0
texture = ExtResource("8_c6q1a")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="NewsContent"]
layout_mode = 2
offset_left = 193.5
offset_top = 223.5
offset_right = 293.5
offset_bottom = 323.5
texture = ExtResource("9_kufai")
metadata/_edit_group_ = true

[node name="TextureRect3" type="TextureRect" parent="NewsContent"]
layout_mode = 2
offset_left = 105.0
offset_top = 220.0
offset_right = 205.0
offset_bottom = 320.0
texture = ExtResource("10_2bcn7")
metadata/_edit_group_ = true

[node name="PublishersContent" type="Control" parent="."]
anchors_preset = 0
offset_left = 42.0
offset_top = 16.0
offset_right = 294.0
offset_bottom = 28.0
scale = Vector2(2, 2)

[node name="TextureRect" type="TextureRect" parent="PublishersContent"]
layout_mode = 0
offset_left = 3.5
offset_top = 104.0
offset_right = 103.5
offset_bottom = 204.0
texture = ExtResource("11_2bcn7")
metadata/_edit_group_ = true

[node name="TextureRect2" type="TextureRect" parent="PublishersContent"]
layout_mode = 0
offset_left = 82.5
offset_top = 102.5
offset_right = 182.5
offset_bottom = 202.5
texture = ExtResource("12_eu5o3")
metadata/_edit_group_ = true

[node name="TextureRect3" type="TextureRect" parent="PublishersContent"]
layout_mode = 0
offset_left = 165.0
offset_top = 103.0
offset_right = 265.0
offset_bottom = 203.0
texture = ExtResource("13_eej11")
metadata/_edit_group_ = true
